--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,35 @@ doctype html
 html
   head
     title= title
+    meta(name='viewport', content='width=device-width, initial-scale=1.0')
+    link(href='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css', rel='stylesheet', media='screen')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
+    .nav.navbar.navbar-default
+      .container-fluid
+        .navbar-header
+          ul.nav.navbar-nav
+            li
+              a(href="/") Home
+            li
+              a(href="/about") About
+          if (!user)
+            form.form-inline.navbar-nav.navbar-form.navbar-right(role="form", action="/login", method="post")
+              .form-group
+                input.form-control(type="text", placeholder="username", name="username")
+              .form-group
+                input.form-control(type="password", placeholder="password", name="password")
+              button.btn.btn-primary(type="submit") Login
+               &nbsp;
+               &nbsp;
+              a(href="/register") Register
+          else
+            ul.nav.navbar-nav.navbar-right
+              li
+                a(href="/planning") Dashboard
+              li
+                a(href="/logout") Logout
+
+
+
     block content
