authentication but no conenction to react

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -27,7 +27,7 @@ html
           else
             ul.nav.navbar-nav.navbar-right
               li
-                a(href="/planning") Dashboard
+                a(href="/planning") Planning
               li
                 a(href="/logout") Logout
 
